--- a/index.html
+++ b/index.html
@@ -1,14 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Clone</title>
     <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <p>Spotify</p>
-    
+    <div class="main">
+        <div class="topNav">
+            <div class="navMainContainer">
+                <div class="navMain">
+                    <div class="homeCircle"><svg id="homeIcon" role="img" aria-hidden="true" viewBox="0 0 24 24"
+                            class="homeIcon homeActive">
+                            <path
+                                d="M13.5 1.515a3 3 0 0 0-3 0L3 5.845a2 2 0 0 0-1 1.732V21a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-6h4v6a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V7.577a2 2 0 0 0-1-1.732l-7.5-4.33z">
+                            </path>
+                        </svg></div>
+                    <div class="navSearchBox">
+                        <!-- SEARCH ICON -->
+                        <svg id="searchIcon" role="img" aria-hidden="true" data-testid="search-icon"
+                            class="searchIcon searchDeactive" viewBox="0 0 24 24">
+                            <path
+                                d="M10.533 1.27893C5.35215 1.27893 1.12598 5.41887 1.12598 10.5579C1.12598 15.697 5.35215 19.8369 10.533 19.8369C12.767 19.8369 14.8235 19.0671 16.4402 17.7794L20.7929 22.132C21.1834 22.5226 21.8166 22.5226 22.2071 22.132C22.5976 21.7415 22.5976 21.1083 22.2071 20.7178L17.8634 16.3741C19.1616 14.7849 19.94 12.7634 19.94 10.5579C19.94 5.41887 15.7138 1.27893 10.533 1.27893ZM3.12598 10.5579C3.12598 6.55226 6.42768 3.27893 10.533 3.27893C14.6383 3.27893 17.94 6.55226 17.94 10.5579C17.94 14.5636 14.6383 17.8369 10.533 17.8369C6.42768 17.8369 3.12598 14.5636 3.12598 10.5579Z">
+                            </path>
+                        </svg>
+
+                        <input id="searchSpotify" type="text" placeholder="What do you want to play?"
+                            class="searchInput">
+
+                        <!-- BROWSE FILES ICON -->
+                        <svg id="browseFilesIcon" role="img" aria-hidden="true" viewBox="0 0 24 24"
+                            class="browseFilesIcon browseDeactive">
+                            <path
+                                d="M4 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v4H4V2zM1.513 9.37A1 1 0 0 1 2.291 9H21.71a1 1 0 0 1 .978 1.208l-2.17 10.208A2 2 0 0 1 18.562 22H5.438a2 2 0 0 1-1.956-1.584l-2.17-10.208a1 1 0 0 1 .201-.837zM12 17.834c1.933 0 3.5-1.044 3.5-2.333 0-1.289-1.567-2.333-3.5-2.333S8.5 14.21 8.5 15.5c0 1.289 1.567 2.333 3.5 2.333z">
+                            </path>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="logoContainer"><img src="/SpotifyLogo.png" class="SpotifyLogo"></div>
+
+            <div class="userBox">
+                <div class="notification"><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16"
+                        class="notificationIcon">
+                        <path
+                            d="M8 1.5a4 4 0 0 0-4 4v3.27a.75.75 0 0 1-.1.373L2.255 12h11.49L12.1 9.142a.75.75 0 0 1-.1-.374V5.5a4 4 0 0 0-4-4zm-5.5 4a5.5 5.5 0 0 1 11 0v3.067l2.193 3.809a.75.75 0 0 1-.65 1.124H10.5a2.5 2.5 0 0 1-5 0H.957a.75.75 0 0 1-.65-1.124L2.5 8.569V5.5zm4.5 8a1 1 0 1 0 2 0H7z">
+                        </path>
+                    </svg></div>
+                <div class="account">
+                    <img src="https://i.scdn.co/image/ab67757000003b82695ae64ffeaea8763bf384fd" alt="SAITAMA"
+                        class="userPfp">
+                </div>
+            </div>
+        </div>
+        <!-- <div class="mainView"></div> -->
+    </div>
     <script src="/app.js"></script>
 </body>
+
 </html>
