--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="logoContainer"><img src="/SpotifyLogo.png" class="SpotifyLogo"></div>
             <div class="navMainContainer">
                 <div class="navMain">
-                    <div class="homeCircle"><svg id="homeIcon" role="img" aria-hidden="true" viewBox="0 0 24 24"
-                            class="homeIcon homeActive">
+                    <div id="homeButton" class="homeCircle"><svg id="homeIcon" role="img" aria-hidden="true"
+                            viewBox="0 0 24 24" class="homeIcon homeActive">
                             <path
                                 d="M13.5 1.515a3 3 0 0 0-3 0L3 5.845a2 2 0 0 0-1 1.732V21a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-6h4v6a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V7.577a2 2 0 0 0-1-1.732l-7.5-4.33z">
                             </path>
@@ -32,10 +32,10 @@
                                 d="M10.533 1.27893C5.35215 1.27893 1.12598 5.41887 1.12598 10.5579C1.12598 15.697 5.35215 19.8369 10.533 19.8369C12.767 19.8369 14.8235 19.0671 16.4402 17.7794L20.7929 22.132C21.1834 22.5226 21.8166 22.5226 22.2071 22.132C22.5976 21.7415 22.5976 21.1083 22.2071 20.7178L17.8634 16.3741C19.1616 14.7849 19.94 12.7634 19.94 10.5579C19.94 5.41887 15.7138 1.27893 10.533 1.27893ZM3.12598 10.5579C3.12598 6.55226 6.42768 3.27893 10.533 3.27893C14.6383 3.27893 17.94 6.55226 17.94 10.5579C17.94 14.5636 14.6383 17.8369 10.533 17.8369C6.42768 17.8369 3.12598 14.5636 3.12598 10.5579Z">
                             </path>
                         </svg>
-
-                        <input id="searchSpotify" type="text" placeholder="What do you want to play?"
-                            class="searchInput">
-
+                        <form id="searchSong">
+                            <input id="searchSpotify" type="text" placeholder="What do you want to play?"
+                                class="searchInput">
+                        </form>
                         <!-- BROWSE FILES ICON -->
                         <svg id="browseFilesIcon" role="img" aria-hidden="true" viewBox="0 0 24 24"
                             class="browseFilesIcon browseDeactive">
@@ -87,7 +87,11 @@
 
         <!-- Main View -->
         <div class="mainViewContainer">
-            <main class="mainView"></main>
+            <main id="mainView" class="mainView"></main>
+            <div id="searchView" class="searchView">
+                <div class="searchResultsHeading">Search Results</div>
+                <div id="resultElementsBox" class="resultElementsBox"></div>
+            </div>
         </div>
 
         <!-- Player -->
@@ -101,11 +105,11 @@
 
                 <div class="nowPlayingNameBox">
                     <div class="titleBox">
-                        <a href="" id="titleText" class="titleText">SLAY!</a>
+                        <a href="" id="titleText" class="titleText"></a>
                     </div>
 
                     <div class="artistBox">
-                        <a href="" id="artistText" class="artistText">Eternxlkz</a>
+                        <a href="" id="artistText" class="artistText"></a>
                     </div>
                 </div>
 
@@ -155,8 +159,8 @@
                         </button>
 
                     </div>
-                    <button class="playPause">
-                        <div class="playCircle">
+                    <button id="playPause" class="playPause">
+                        <div id="playCircle" class="playCircle">
                             <svg id="playIcon" role="img" aria-hidden="true" viewBox="0 0 16 16" class="playIcon">
                                 <path
                                     d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z">
@@ -186,7 +190,7 @@
                     </div>
                 </div>
                 <div class="progressBarBox">
-                    <div class="currentDurationBox">0:00</div>
+                    <div id="currentDurationBox" class="currentDurationBox"> -:--</div>
                     <div id="track" class="track">
                         <div id="progress" class="progress">
 
@@ -195,9 +199,8 @@
 
                         </div>
                     </div>
-                    <div class="maxDurationBox">3:00</div>
-                    <input type="range" id="hiddenRange" min="0" max="100" value="50" hidden>
-                    <audio id="playingAudio" src="https://aac.saavncdn.com/665/7790c3b9097592113008eaf1031d6e57_320.mp4"></audio>
+                    <div id="maxDurationBox" class="maxDurationBox"> -:--</div>
+                    <audio id="playingAudio" src=""></audio>
                 </div>
             </div>
 
@@ -240,7 +243,7 @@
                 </button>
 
                 <div class="volumeContainer">
-                    <button class="volumeIconBox iconBox">
+                    <button id="volumeIconBox" class="volumeIconBox iconBox">
                         <svg role="presentation" aria-label="Volume high" aria-hidden="false" id="volumeIcon"
                             viewBox="0 0 16 16" class="volumeIcon playerIcons">
                             <path
@@ -252,7 +255,7 @@
                     </button>
 
                     <div class="volumeControlBox">
-                        <input id="volumeInput" class="volumeInput" type="range" min="0" max="1" step="0.1" value="0">
+                        <input id="volumeInput" class="volumeInput" type="range" min="0" max="1" step="0.1" value="1">
                     </div>
                 </div>
 
