--- a/index.html
+++ b/index.html
@@ -93,6 +93,40 @@
                 <div id="resultElementsBox" class="resultElementsBox"></div>
             </div>
         </div>
+        <!-- Right Sidebar -->
+        <div id="rightSideBarContainer" class="rightSideBarContainer">
+            <div id="blackCover" class="blackCover"></div>
+            <div id="rightBarTop" class="rightBarTop">
+                <div id="topTitleBox" class="topTitleBox">Not Playing</div>
+                <div id="topIconContainer" class="topIconContainer">
+                    <div id="moreBox" class="moreBox topIconBox">
+                        <svg id="moreIcon" role="img" aria-hidden="true" viewBox="0 0 16 16" class="moreIcon topIcons">
+                            <path
+                                d="M3 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm6.5 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zM16 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z">
+                            </path>
+                        </svg>
+                    </div>
+                    <div id="closeBox" class="closeBox topIconBox">
+                        <svg id="closeIcon" role="img" aria-hidden="true" viewBox="0 0 16 16"
+                            class="closeIcon topIcons">
+                            <path
+                                d="M2.47 2.47a.75.75 0 0 1 1.06 0L8 6.94l4.47-4.47a.75.75 0 1 1 1.06 1.06L9.06 8l4.47 4.47a.75.75 0 1 1-1.06 1.06L8 9.06l-4.47 4.47a.75.75 0 0 1-1.06-1.06L6.94 8 2.47 3.53a.75.75 0 0 1 0-1.06Z">
+                            </path>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+
+            <div id="rightBarBottom" class="rightBarBottom">
+                <div id="rightBarSongDetails" class="rightBarSongDetails">
+                    <div id="rightTitle" class="rightTitle">Not Playing</div>
+                    <div id="rightArtistBox" class="rightArtistBox">
+                        <div id="rightFirstArtist" class="rightFirstArtist rightArtist">-----</div>
+                        <div style="display: flex;">, <p id="rightSecondArtist" class="rightSecondArtist rightArtist">-----</p></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Player -->
         <div class="playerContainer">
@@ -205,7 +239,7 @@
             </div>
 
             <div class="otherControlsBox">
-                <button class="nowPlayingViewBox iconBox">
+                <button id="sidebarOpen" class="nowPlayingViewBox iconBox">
                     <svg id="nowPlayingViewIcon" role="img" aria-hidden="true" viewBox="0 0 16 16"
                         class="nowPlayingViewIcon playerIcons">
                         <path d="M11.196 8 6 5v6l5.196-3z"></path>
