--- a/index.html
+++ b/index.html
@@ -104,10 +104,9 @@
             <main id="mainView" class="mainView">
                 <div class="userPlaylistContainer">
                     <div class="uPlaylistBox1 uPlaylistBox">
-                        <img crossorigin="anonymous" id="uPlaylistImg1"
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTH5P2BW0w7KwbWhrw-oa17dNfbGfyTMgEumA&s"
+                        <img crossorigin="anonymous" id="uPlaylistImg1" src="/nowPlaying.jpg"
                             class="uPlaylistImg1 uPlaylistImg">
-                        <p>Between the heavens and earth</p>
+                        <p>------</p>
                         <span class="playPlaylist">
                             <svg id="playPlaylistIcon" role="img" aria-hidden="true" viewBox="0 0 16 16"
                                 class="playPlaylistIcon">
@@ -118,10 +117,8 @@
                         </span>
                     </div>
                     <div class="uPlaylistBox2 uPlaylistBox">
-                        <img crossorigin="anonymous"
-                            src="https://ew.com/thmb/IVjmtfkRu2ZP4GDYmiFkPUe7yTc=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Weeknd-d4fb08e62a924691a18af068d9bfa972.jpg"
-                            class="uPlaylistImg2 uPlaylistImg">
-                        <p>Other Playlist</p>
+                        <img crossorigin="anonymous" src="/nowPlaying.jpg" class="uPlaylistImg2 uPlaylistImg">
+                        <p>------</p>
                         <span class="playPlaylist">
                             <svg id="playPlaylistIcon" role="img" aria-hidden="true" viewBox="0 0 16 16"
                                 class="playPlaylistIcon">
