--- a/index.html
+++ b/index.html
@@ -78,14 +78,13 @@
 
             <!-- Library Box -->
             <div class="libItemOutBox">
-                <div class="libItemInBox">
-                    <ul role="list" aria-label="Your Library" style="list-style: none;">
-                        <li class="li1">
-                            <div class="libItem1 libItem">
-                                <img src="/nowPlaying.jpg" alt="" id="libItem1Img" class="libItem1Img">
-                            </div>
-                        </li>
-                    </ul>
+                <div id="libItemInBox" class="libItemInBox">
+                    <!-- <div class="libItem1 libItem">
+                        <img src="/nowPlaying.jpg" alt="" id="libItem1Img" class="libItem1Img libItemImg">
+                    </div>
+                    <div class="libItem1 libItem">
+                        <img src="/nowPlaying.jpg" alt="" id="libItem1Img" class="libItem1Img libItemImg">
+                    </div> -->
                 </div>
             </div>
         </div>
