minor breakpoints added

--- a/index.html
+++ b/index.html
@@ -79,12 +79,7 @@
             <!-- Library Box -->
             <div class="libItemOutBox">
                 <div id="libItemInBox" class="libItemInBox">
-                    <!-- <div class="libItem1 libItem">
-                        <img src="/nowPlaying.jpg" alt="" id="libItem1Img" class="libItem1Img libItemImg">
-                    </div>
-                    <div class="libItem1 libItem">
-                        <img src="/nowPlaying.jpg" alt="" id="libItem1Img" class="libItem1Img libItemImg">
-                    </div> -->
+                    <!-- content dynamic -->
                 </div>
             </div>
         </div>
